<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ventanaAlta">

    <TextView
        android:id="@+id/txtIdCliente"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:text="@string/idC"
        android:textColor="@color/rosaPrincipal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074" />

    <EditText
        android:id="@+id/idC"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:backgroundTint="#B5B3B3"
        android:ems="10"
        android:hint="@string/DidC"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHighlight="#F85F6A"
        android:textColorHint="#686767"
        android:textColorLink="#F85F6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtAlias"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:text="@string/alias"
        android:textColor="@color/rosaPrincipal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

    <EditText
        android:id="@+id/alias"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:backgroundTint="#B5B3B3"
        android:ems="10"
        android:hint="@string/Dalias"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHighlight="#F85F6A"
        android:textColorHint="#686767"
        android:textColorLink="#F85F6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtEspecie"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:text="@string/especie"
        android:textColor="@color/rosaPrincipal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.336" />

    <EditText
        android:id="@+id/especie"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:backgroundTint="#B5B3B3"
        android:ems="10"
        android:hint="@string/Despecie"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHighlight="#F85F6A"
        android:textColorHint="#686767"
        android:textColorLink="#F85F6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.394"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtRaza"
        android:layout_width="113dp"
        android:layout_height="18dp"
        android:text="@string/raza"
        android:textColor="@color/rosaPrincipal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <EditText
        android:id="@+id/raza"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:backgroundTint="#B5B3B3"
        android:ems="10"
        android:hint="@string/Draza"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHighlight="#F85F6A"
        android:textColorHint="#686767"
        android:textColorLink="#F85F6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.531"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:id="@+id/txtColor"
        android:layout_width="167dp"
        android:layout_height="25dp"
        android:text="@string/color"
        android:textColor="@color/rosaPrincipal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.593" />

    <EditText
        android:id="@+id/color"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:backgroundTint="#B5B3B3"
        android:ems="10"
        android:hint="@string/Dcolor"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHighlight="#F85F6A"
        android:textColorHint="#686767"
        android:textColorLink="#F85F6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.663"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/txtFNac"
        android:layout_width="167dp"
        android:layout_height="25dp"
        android:text="@string/fNac"
        android:textColor="@color/rosaPrincipal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <EditText
        android:id="@+id/fnac"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:backgroundTint="#B5B3B3"
        android:ems="10"
        android:hint="@string/DfNac"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHighlight="#F85F6A"
        android:textColorHint="#686767"
        android:textColorLink="#F85F6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.804"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/bntAgregar"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/rosaPrincipal"
        android:text="@string/agregar"
        android:onClick="goAgregar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

    <Button
        android:id="@+id/bntRegresar"
        android:layout_width="130dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/rosaPrincipal"
        android:text="@string/regresar"
        android:onClick="goVentanaInicio"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915" />

</androidx.constraintlayout.widget.ConstraintLayout>