<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ventanaConsulta">

    <TextView
        android:id="@+id/txtConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consultaTxt"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.331"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/txtId"
        android:layout_width="34dp"
        android:layout_height="18dp"
        android:text="id"
        android:textColor="@color/rosaPrincipal"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.333" />

    <Button
        android:id="@+id/bntConsultar"
        android:layout_width="288dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/rosaPrincipal"
        android:onClick="goConsultar"
        android:text="@string/continuar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

    <EditText
        android:id="@+id/id"
        android:layout_width="288dp"
        android:layout_height="44dp"
        android:backgroundTint="#B5B3B3"
        android:ems="10"
        android:hint="@string/digiteId"
        android:inputType="number"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textColorHighlight="#F85F6A"
        android:textColorHint="#686767"
        android:textColorLink="#F85F6A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372"
        tools:ignore="TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>